--- a/NECF/test-output/index.html
+++ b/NECF/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\jubin\AppData\Local\Temp\testng-eclipse-503270464\testng-customsuite.xml</span>
+                    <span>C:\Users\jubin\AppData\Local\Temp\testng-eclipse--1677145062\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -130,9 +130,9 @@
                   </a> <!-- runScenario("Verify NECF website is running", "NECF Website Health Check") -->
                   <span class="method-name">runScenario</span>
                   <span class="parameters">("Verify NECF website is running","NECF Website Health Check")</span>
-                  <div class="stack-trace">junit.framework.AssertionFailedError: Title verification failed! Expected: NECF Global – Marketplace1, Found: NECF Global – Marketplace
-	at junit.framework.Assert.fail(Assert.java:47)
-	at com.pages.HomePage.verifyingTitle(HomePage.java:137)
+                  <div class="stack-trace">java.lang.AssertionError: Title verification failed! Expected: NECF Global – Marketplace1, Found: NECF Global – Marketplace
+	at org.testng.Assert.fail(Assert.java:111)
+	at com.pages.HomePage.verifyingTitle(HomePage.java:139)
 	at com.stepDefinitions.HomePageStep.the_website_should_load_successfully(HomePageStep.java:34)
 	at ✽.the website should load successfully(file:///C:/Users/jubin/NECF%20Project/NECF/src/test/resources/NECF.feature:5)
 
@@ -146,7 +146,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\jubin\AppData\Local\Temp\testng-eclipse-503270464\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\jubin\AppData\Local\Temp\testng-eclipse--1677145062\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -207,12 +207,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'com.testRunner.TestRunner')
-data.setCell(0, 3, 42845);
+data.setCell(0, 3, 43545);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 42 seconds</span>
+              <span class="suite-total-time">Total running time: 43 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -244,18 +244,18 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@4f82248f)</span>
-                <span class="method-start">31 ms</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@6150afc6)</span>
+                <span class="method-start">32 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">runScenario("Verify NECF website is running", "NECF Website Health Check")</span>
-                <span class="method-start">716 ms</span>
+                <span class="method-start">865 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">43578 ms</span>
+                <span class="method-start">44418 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
